--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    padding: 20px 80px; /* 위, 아래, 왼쪽, 오른쪽에 20px의 패딩을 추가합니다 */
+    padding: 20px 60px; /* 위/아래, 왼쪽/오른쪽에 20px의 패딩을 추가합니다 */
 }
 
 /* 제목 1 */
