--- a/style.css
+++ b/style.css
@@ -11,11 +11,15 @@ h1 {
 /* 제목 2 */
 h2 {
     font-size: 60px;
+    color: white;
+    background-color: rgb(0, 112, 192);
 }
 
 /* 제목 3 */
 h3 {
     font-size: 55px;
+    color: white;
+    background-color: rgb(0, 192, 80);
 }
 
 /* 제목 4 */
@@ -29,23 +33,6 @@ h4 {
     color: black;
     background-color: rgb(222, 234, 246);
     font-size: 40px;
-}
-
-/* 영어 문장 */
-.audioText {
-    transition: background-color 0.3s, color 0.3s; /* 애니메이션 효과를 부드럽게 적용하기 위한 설정 */
-    font-family: Open Sans;
-    color: rgb(0, 112, 192);
-    font-size: 45px;
-}
-
-.audioText:hover {
-    /* 원하는 마우스 커서 스타일을 설정하세요 */
-    cursor: pointer;
-    /* 마우스를 올렸을 때의 배경색 */
-    background-color: rgb(0, 112, 192);
-    /* 마우스를 올렸을 때의 글자색 */
-    color: rgb(255, 255, 255);
 }
 
 /* 해석 */
@@ -82,4 +69,79 @@ hr {
     border: none;
     height: 10px;
     background-color: blue;
+}
+
+/* 테이블 */
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+td {
+    padding: 5px;
+    text-align: center;
+    vertical-align: top;
+    border: 1px solid black; /* 예시로 테두리를 추가하였습니다 */
+}
+
+.contents {
+    font-size: 40px;
+    text-align: center;
+}
+
+.audioText {
+    padding-left: 0px;
+    transition: background-color 0.3s, color 0.3s; /* 애니메이션 효과를 부드럽게 적용하기 위한 설정 */
+    font-family: Open Sans;
+    color: rgb(0, 112, 192);
+    font-size: 45px;
+}
+
+.audioText:hover {
+    /* 원하는 마우스 커서 스타일을 설정하세요 */
+    cursor: pointer;
+    /* 마우스를 올렸을 때의 배경색 */
+    background-color: rgb(0, 112, 192);
+    /* 마우스를 올렸을 때의 글자색 */
+    color: rgb(255, 255, 255);
+}
+
+/* 메뉴바 --------------------------------------------------------------------------- */
+.menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #ccc;
+    padding: 0;
+    z-index: 999;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+
+.menu .m-btn {
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+}
+
+.m-btn {
+    transition: background-color 0.3s, color 0.3s; /* 애니메이션 효과를 부드럽게 적용하기 위한 설정 */
+    font-family: Open Sans;
+    background-color: rgb(196, 236, 212);
+    color: rgb(0, 192, 80);
+    font-size: 50px;
+}
+
+.m-btn:hover {
+    /* 원하는 마우스 커서 스타일을 설정하세요 */
+    cursor: pointer;
+    /* 마우스를 올렸을 때의 배경색 */
+    background-color: rgb(0, 192, 80);
+    /* 마우스를 올렸을 때의 글자색 */
+    color: rgb(255, 255, 255);
 }
