--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ h4 {
     color: black;
     background-color: rgb(222, 234, 246);
     font-size: 40px;
+    text-decoration-color: red;
+    text-decoration-thickness: 2px;
 }
 
 /* 해석 */
@@ -89,6 +91,7 @@ td {
     text-align: center;
 }
 
+/* 영어 텍스트 */
 .audioText {
     padding-left: 0px;
     transition: background-color 0.3s, color 0.3s; /* 애니메이션 효과를 부드럽게 적용하기 위한 설정 */
