--- a/style.css
+++ b/style.css
@@ -27,14 +27,18 @@ h4 {
     font-size: 50px;
 }
 
+u {
+    /* text-decoration: none; */
+    text-decoration-thickness: 1.4px;
+    color: red;
+}
+
 /* 해설 */
 .exp {
     font-family: inherit;
     color: black;
     background-color: rgb(222, 234, 246);
     font-size: 40px;
-    text-decoration-color: red;
-    text-decoration-thickness: 2px;
 }
 
 /* 해석 */
