--- a/style.css
+++ b/style.css
@@ -4,27 +4,27 @@ body {
 
 /* 제목 1 */
 h1 {
-    font-size: 45px;
+    font-size: 65px;
     text-align: center;
 }
 
 /* 제목 2 */
 h2 {
-    font-size: 40px;
+    font-size: 60px;
     color: white;
     background-color: rgb(0, 112, 192);
 }
 
 /* 제목 3 */
 h3 {
-    font-size: 35px;
+    font-size: 55px;
     color: white;
     background-color: rgb(0, 192, 80);
 }
 
 /* 제목 4 */
 h4 {
-    font-size: 30px;
+    font-size: 50px;
 }
 
 u {
@@ -38,7 +38,7 @@ u {
     transition: background-color 0.3s, color 0.3s; /* 애니메이션 효과를 부드럽게 적용하기 위한 설정 */
     margin: 15px 0;
     font-family: "Times New Roman", Times, serif;
-    font-size: 30px;
+    font-size: 50px;
     color: rgb(0, 112, 192);
 }
 
@@ -56,20 +56,20 @@ u {
     color: black;
     background-color: rgb(222, 234, 246);
     margin: 15px 0;
-    font-size: 30px;
+    font-size: 40px;
 }
 
 /* 일반 영어 텍스트 */
 .eng {
     font-family: "Times New Roman", Times, serif;
-    font-size: 30px;
+    font-size: 50px;
     margin: 15px 0;
 }
 
 /* 해석 */
 .kor {
     color: rgb(0, 192, 80);
-    font-size: 25px;
+    font-size: 35px;
     margin: 15px 0px;
 }
 
@@ -77,11 +77,17 @@ u {
 .word {
     color: rgb(56, 56, 56);
     background-color: rgb(231, 230, 230);
-    font-size: 25px;
+    font-size: 35px;
     margin: 15px 0px;
 }
 
-/* 링크 스타일 */
+/* 주석 */
+.comment {
+    padding: 0px 10px;
+    border: 2px solid rgb(121, 121, 121);
+}
+
+/* 링크 스타일 -------------------------------------------------------------------- */
 a {
     display: block;
     padding: 0px;
@@ -97,12 +103,19 @@ a:hover {
     color: rgb(255, 255, 255); /* 변경된 글자색 */
 }
 
-/* 주석 */
-.comment {
-    padding: 0px 10px;
-    border: 2px solid rgb(121, 121, 121);
+/* 챕터 리스트 */
+.chap-list {
+    padding: 0 40px;
+    font-size: 40px;
 }
 
+/* 챕터 소제목 리스트 */
+.subchap-list {
+    padding: 0 40px;
+    font-size: 40px;
+}
+
+/* 테이블 --------------------------------------------------------------------------- */
 /* 테이블 */
 table {
     /* width: 100%; */
@@ -111,20 +124,20 @@ table {
     margin-right: auto;
 }
 
+th,
 td {
     /* padding: 5px; */
     vertical-align: top;
     border: 1px solid rgb(233, 233, 233); /* 예시로 테두리를 추가하였습니다 */
 }
 
-.chap-list {
-    padding: 0 40px;
-    font-size: 40px;
-}
-
-.subchap-list {
-    padding: 0 40px;
-    font-size: 40px;
+.box-th,
+.box-td {
+    padding: 10px;
+    vertical-align: top;
+    border: 1px solid rgb(0, 0, 0); /* 예시로 테두리를 추가하였습니다 */
+    text-align: center;
+    font-size: 20px;
 }
 
 /* 메뉴바 --------------------------------------------------------------------------- */
@@ -155,7 +168,7 @@ td {
     font-family: Open Sans;
     background-color: rgb(196, 236, 212);
     color: rgb(0, 192, 80);
-    font-size: 25px;
+    font-size: 40px;
 }
 
 .m-btn:hover {
